--- a/inst/pages/04_containers.qmd
+++ b/inst/pages/04_containers.qmd
@@ -9,8 +9,7 @@ chapterPreamble()
 
 The building blocks of the framework are **data container**
 (SummarizedExperiment and its derivatives), **packages** from various
-developers using the `TreeSE` container, open **demonstration data
-sets**, in a separate chapter [@sec-example-data], and **online
+developers using the `TreeSE` container, open **demonstration datasets**, in a separate chapter [@sec-example-data], and **online
 tutorials** including this online book as well as the various package
 vignettes and other materials.
 
@@ -41,7 +40,7 @@ highlight how the methods used througout in this book relate to this
 data framework by using the `TreeSE`,
 `MAE`, and classes beyond.
 
-This section provides an introductions to these data containers. In
+This section provides an introduction to these data containers. In
 microbiome data science, these containers link taxonomic abundance
 tables with rich side information on the features and
 samples. Taxonomic abundance data can be obtained by 16S rRNA amplicon
@@ -510,7 +509,7 @@ abundance table, `rowdata`, and `coldata`:
 # Match rows and columns
 counts <- counts[rownames(tax), rownames(samples)]
 
-# Let us ensure that the data is in correct (numeric matrix) format:
+# Let's ensure that the data is in correct (numeric matrix) format:
 counts <- as.matrix(counts)
 ```
 
@@ -537,7 +536,7 @@ class(counts) # should be a numeric matrix
 
 ### Constructing TreeSE
 
-Now let us create the `TreeSE` object from the input data tables. Here
+Now, let's create the `TreeSE` object from the input data tables. Here
 we also convert the data objects in their preferred formats:
 
    - counts --> numeric matrix
