--- a/inst/pages/10_manipulation.qmd
+++ b/inst/pages/10_manipulation.qmd
@@ -5,7 +5,7 @@ library(rebook)
 chapterPreamble()
 ```
 
-## Tidying and subsetting
+## Tidying and Subsetting
 
 ### Tidy data
 
@@ -48,7 +48,7 @@ library(dplyr)
 library(knitr)
 ```
 
-Let us store `GlobalPatterns` into `tse` and check its original number of features (rows) and samples (columns). **Note**: when subsetting by sample, expect the number of columns to decrease; when subsetting by feature, expect the number of rows to decrease.
+Let us store `GlobalPatterns` into `tse` and check its original number of features (rows) and samples (columns). **Note**: When subsetting by sample, expect the number of columns to decrease. When subsetting by feature, expect the number of rows to decrease.
 
 ```{r}
 # Store data into se and check dimensions
@@ -62,7 +62,7 @@ dim(tse)
 
 For the sake of demonstration, here we will extract a subset containing only the samples of human origin (feces, skin or tongue), stored as `SampleType` within `colData(tse)` as well as in `tse`.
 
-First, we would like to see all the possible values that `SampleType` can take on and how frequent those are: 
+First, we would like to see all the possible values that `SampleType` can have and how frequent those are: 
 
 ```{r}
 # Inspect possible values for SampleType
@@ -104,7 +104,7 @@ the original number of features (rows) and a number of samples
 (columns) equal to the sum of the samples of interest (in this case
 9).
 
-Several characteristics can be used to subset by sample:
+Several criteria can be used to subset by sample:
 
 * origin
 * sampling time
@@ -120,8 +120,7 @@ that belong to the phyla Actinobacteria and Chlamydiae, stored as
 a few more obstacles, such as the presence of `NA` elements and the
 possible need for agglomeration.
 
-As previously, we would first like to see all the possible values that
-`Phylum` can take on and how frequent those are:
+As previously, we would first like to see all the possible values that `Phylum` can have and how frequent those are:
   
 ```{r}
 # Inspect possible values for phylum
@@ -215,8 +214,7 @@ Fewer characteristics can be used to subset by feature:
 * Taxonomic rank
 * Meta-taxonomic group
 
-For subsetting by kingdom, agglomeration does not apply, whereas for
-the other ranks it can be applied if necessary.
+For subsetting by kingdom, agglomeration does not apply, whereas for the other ranks it can be applied if necessary.
 
 #### Subset by sample and feature
 
@@ -247,7 +245,7 @@ with.
 #### Remove empty columns and rows
 
 Sometimes data might contain, e.g., features that are not present in any of the  samples.
-This can occur, for example, after the data subsetting. In certain analyses, we might want to
+This can occur, for example, after data subsetting. In certain analyses, we might want to
 remove those instances.
 
 ```{r}
