--- a/inst/pages/12_quality_control.qmd
+++ b/inst/pages/12_quality_control.qmd
@@ -7,13 +7,13 @@ chapterPreamble()
 
 This chapter focuses on the quality control and exploration of
 microbiome data and establishes commonly used descriptive
-summaries. Familiarizing with the peculiarities of a given dataset is
+summaries. Familiarizing yourself with the peculiarities of a given dataset is
 essential for data analysis and model building.
 
 The dataset should not suffer from severe technical biases, and you
 should at least be aware of potential challenges, such as outliers,
 biases, unexpected patterns and so forth. Standard summaries and
-visualizations can help, and the rest comes with experience.Moreover, exploration and quality control often entail iterative processes.
+visualizations can help, and the rest comes with experience. Moreover, exploration and quality control often entail iterative processes.
 
 ```{r, message=FALSE}
 library(mia)
@@ -83,7 +83,7 @@ head(getPrevalence(tse, detection = 1/100,
 ```
 
 The function arguments `detection` and `as_relative` can also be used
-to access, how many samples do pass a threshold for raw counts. Here,
+to access how many samples pass a threshold for raw counts. Here,
 the population prevalence (frequency) at the absolute abundance
 threshold (`as_relative = FALSE`) at read count 1 (`detection = 1`) is
 accessed.
@@ -223,7 +223,7 @@ plotRowTree(x[rowData(x)$Phylum %in% top_phyla_mean,],
 
 ## Quality control {#sec-qc}
 
-Next, let us load the `GlobalPatterns` dataset to illustrate standard
+Next, let's load the `GlobalPatterns` dataset to illustrate standard
 microbiome data summaries.
 
 ```{r, message=FALSE}
@@ -299,16 +299,14 @@ library(patchwork)
 p1 + p2
 ```
 
-Library sizes other variables from `colData` can be
-visualized by using specified function called `plotColData`.
+Library sizes other variables from `colData` can be visualized by using a specified function called `plotColData`.
 
 ```{r plot-viz-lib-size-2, fig.width=8, fig.height=4, fig.cap="Library sizes per sample."}
 # Sort samples by read count, 
 # order the factor levels, 
 # and store back to tse as DataFrame
 # TODO: plotColData could include an option 
-# for sorting samples 
-# based on colData variables
+# for sorting samples based on colData variables
 colData(tse) <- as.data.frame(colData(tse)) %>%
                  arrange(X.SampleID) %>%
         	 mutate(X.SampleID = factor(X.SampleID, 
@@ -326,7 +324,7 @@ plotColData(tse,"sum","SampleType", colour_by = "SampleType") +
 
 In addition, data can be rarefied with
 [rarefyAssay](https://microbiome.github.io/mia/reference/rarefyAssay.html),
-which normalises the samples to an equal number of reads. 
+which normalizes the samples to an equal number of reads. 
 This remains controversial, however, and strategies to mitigate the information loss in rarefaction have been proposed [@Schloss2024rarefaction1] [@Schloss2024rarefaction2].
 Moreover, this practice has been discouraged for the analysis of differentially
 abundant microorganisms (see [@mcmurdie2014waste]).
