--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -28,7 +28,7 @@ techniques found in this book, such as:
 The toolkit which provides the essential plotting functionality
 includes the following packages:
 
-* _patchwork_, _cowplot_, _ggpubr_ and _gridExtra_: plot layout and multi-panel plotting
+* _patchwork_, _cowplot_, _ggpubr_ and _gridExtra_: plot layouts and multi-panel plotting
 * _miaViz_: specific visualization tools for `TreeSummaizedExperiment` objects
 * _scater_: specific visualization tools for `SingleCellExperiment` objects
 * _ggplot2_, _pheatmap_, _ggtree_, _sechm_: composition heatmaps
@@ -331,7 +331,7 @@ library(patchwork)
 # Combine legends
 legend <- wrap_plots(as_ggplot(get_legend(plots[[1]])), as_ggplot(get_legend(plots[[2]])), ncol = 1) 
 
-# Remove legends from the plots
+# Removes legends from the plots
 plots[[1]] <- plots[[1]] + theme(legend.position = "none")
 plots[[2]] <- plots[[2]] + theme(legend.position = "none", axis.title.x=element_blank()) 
 
@@ -478,7 +478,7 @@ Now we can create heatmap with additional annotations.
 
 ```{r}
 #| label = "pheatmap6"
-# Determines the scaling of colorss
+# Determines the scaling of colors
 # Scale colors
 breaks <- seq(-ceiling(max(abs(mat))), ceiling(max(abs(mat))), 
               length.out = ifelse( max(abs(mat))>5, 2*ceiling(max(abs(mat))), 10 ) )
