--- a/inst/pages/20_beta_diversity.qmd
+++ b/inst/pages/20_beta_diversity.qmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
   dev.args = list(type = "cairo-png")
 )
 ```
-Beta diversity quantifies the dissimilarity between communities (multiple samples), as opposed to alpha diversity which focuses on variation within a community (one sample). In microbiome research, commonly used metrics of beta diversity include:
+Beta diversity quantifies the dissimilarity between communities (multiple samples), as opposed to alpha diversity, which focuses on variation within a community (one sample). In microbiome research, commonly used metrics of beta diversity include:
 
 - Bray-Curtis index (for compositional data)
 - Jaccard index (for presence/absence data, ignoring abundance information)
@@ -58,7 +58,7 @@ be generally divided in two categories:
 The former includes Principal Coordinate Analysis (PCoA), Principal Component
 Analysis (PCA) and Uniform Manifold Approximation and Projection for Dimension
 Reduction (UMAP), whereas the latter is mainly represented by distance-based
-Redundancy Analysis (dbRDA). We will first discuss unsupervised ordination
+Redundancy Analysis (dbRDA). First, we will discuss unsupervised ordination
 methods and then proceed to supervised ones.
 
 Let us now prepare some demonstration data for the practical examples.
@@ -105,11 +105,11 @@ tse <- mia::addDivergence(tse,
 
 ## Unsupervised ordination {#sec-unsupervised-ordination}
 
-Unsupervised ordination methods variation in the data without additional
+Unsupervised ordination methods analyze variation in the data without additional
 information on covariates or other supervision of the model. Among the different
 approaches, Multi-Dimensional Scaling (MDS) and non-metric MDS (NMDS) can be
 regarded as the standard. They are jointly referred to as PCoA. For this
-demonstration we will analyse beta diversity in GlobalPatterns, and observe the
+demonstration, we will analyse beta diversity in GlobalPatterns, and observe the
 variation between stool samples and those with a different origin.
 
 
@@ -216,7 +216,7 @@ wrap_plots(plots) +
 ```
 
 The _Unifrac_ method is a special case, as it requires data on the
-relationship of features in form on a `phylo` tree. `calculateUnifrac`
+relationship of features in the form of a `phylo` tree. `calculateUnifrac`
 performs the calculation to return a `dist` object, which can again be
 used within `runMDS`.
 
@@ -263,7 +263,7 @@ plotReducedDim(tse, "UMAP",
 
 ### Explained variance
 
-The percentage of explained variance is typically shown for PCA
+The percentage of explained variance is typically shown in PCA
 ordination plots. This quantifies the proportion of overall variance
 in the data that is captured by the PCA axes, or how well the
 ordination axes reflect the original distances.
@@ -285,7 +285,7 @@ difference in pairwise similarities between the data points in the
 original (high-dimensional) vs. projected (low-dimensional) space.
 
 Hence, we propose that for PCoA and other ordination methods, users
-would report relative stress, which varies in the unit interval and is better
+would report relative stress, which varies within the unit interval and is better
 if smaller. This can be calculated as shown below.
 
 ```{r relstress}
