--- a/inst/pages/23_multi-assay_analyses.qmd
+++ b/inst/pages/23_multi-assay_analyses.qmd
@@ -19,7 +19,7 @@ discovery of novel biomarkers. In this section we demonstrate common
 multi-assay data integration tasks.
 
 Cross-correlation analysis is a straightforward approach that can
-reveal strength and type of assocations between data sets. For instance,
+reveal strength and type of associations between data sets. For instance,
 we can analyze if higher presence of a specific taxon relates to higher
 levels of a biomolecule.
 
@@ -28,25 +28,25 @@ _TreeSummarizedExperiment_ and _MultiAssayExperiment_. These are
 scalable and contain different types of data in a single container,
 making this framework particularly suited for multi-assay microbiome
 data incorporating different types of complementary data sources in a
-single reproducible workflow. Solutions to a number of data
+single, reproducible workflow. Solutions to a number of data
 integration problems are discussed in more detail in Section
-[@sec-containers]. Another experiment can be stored in _altExp_ slot
-of SE data container. Alternatively, both experiments can be stored
-side-by-side in a MAE data container (see sections [@sec-alt-exp] and [@sec-mae]
+[@sec-containers]. An alternative experiment can be stored in _altExp_ slot
+of the SE data container. Alternatively, both experiments can be stored
+side-by-side in an MAE data container (see sections [@sec-alt-exp] and [@sec-mae]
 to learn more about altExp and MAE objects, respectively). Different
 experiments are first imported as single-assay data containers similarly to
-the case when only one experiment is present. After that, the
+the case in which only one experiment is present. After that, the
 different experiments can be combined into one multi-assay data
 container. The result is a MAE object with multiple experiments in its
 experiment slot, or a TreeSE object with alternative experiments in
 the altExp slot.
 
 As an example, we use a dataset from the following publication:
-[-@Hintikka2021] Xylo-oligosaccharides in prevention of hepatic
+[-@Hintikka2021] Xylo-Oligosaccharides in prevention of hepatic
 steatosis and adipose tissue inflammation: associating taxonomic and
 metabolomic patterns in fecal microbiota with biclustering.
 In this study, mice were fed either with a high-fat or a low-fat diet,
-and with or without prebiotics, for the purpose studying whether prebiotics
+and with or without prebiotics, for the purpose of studying whether prebiotics
 attenuate the negative impact of a high-fat diet on health.
 
 This example data can be loaded from microbiomeDataSets. The data is
@@ -64,7 +64,7 @@ mae <- HintikkaXOData
 
 ```{r cross-correlation2}
 library(stringr)
-# Drop off those bacteria that do not include information in Phylum or lower levels
+# Drop those bacteria that do not include information in Phylum or lower levels
 mae[[1]] <- mae[[1]][!is.na(rowData(mae[[1]])$Phylum), ]
 # Clean taxonomy data, so that names do not include additional characters
 rowData(mae[[1]]) <- DataFrame(apply(rowData(mae[[1]]), 2, 
@@ -104,7 +104,7 @@ mae[[1]] <- mergeFeaturesByPrevalence(mae[[1]], rank = "Family")
 # Does log10 transform for microbiome data
 mae[[1]] <- transformAssay(mae[[1]], method = "log10", pseudocount = TRUE)
 
-# Give unique names so that we do not have problems when we are creating a plot
+# Give unique names, so that we do not have problems when we are creating a plot
 rownames(mae[[1]]) <- getTaxonomyLabels(mae[[1]])
 
 # Cross correlates data sets
@@ -196,7 +196,7 @@ mae[[3]] <- transformAssay(mae[[3]], assay.type = "signals",
                            MARGIN = "features",
                            method = "z", pseudocount = 1)
 
-# Removing assays no longer needed
+# Removing the assays no longer needed
 assay(mae[[1]], "counts") <- NULL
 assay(mae[[1]], "log10") <- NULL
 assay(mae[[2]], "nmr") <- NULL
