--- a/inst/pages/24_clustering.qmd
+++ b/inst/pages/24_clustering.qmd
@@ -11,8 +11,7 @@ The data can be clustered either based on features or samples. Hence, depending 
 
 ## Custom tools
 
-*bluster* is a Bioconductor package providing tools for clustering data in 
-in the `SummarizedExperiment` container. It offers multiple algorithms such 
+*bluster* is a Bioconductor package providing tools for clustering data in the `SummarizedExperiment` container. It offers multiple algorithms such 
 as hierarchical clustering, DBSCAN, and K-means. 
 
 ```{r load_bluster}
@@ -33,12 +32,12 @@ tse <- transformAssay(tse, method = "relabundance")
 ```
 
 The main focus in this example is to show how to use mia's `addCluster` function to 
-cluster enterotype data. `addCluster` function allows to choose a clustering algorithm and offers multiple parameters to shape the result. 
+cluster enterotype data. The `addCluster` function allows to choose a clustering algorithm and offers multiple parameters to shape the result. 
 
 In this example, HclustParam() parameter is chosen for hierarchical clustering. 
 HclustParam() parameter itself has parameters on its own 
 [HclustParam documentation](https://rdrr.io/github/LTLA/bluster/man/HclustParam-class.html).
-A parameter is `MARGIN` defines whether to cluster features or samples .
+A parameter, `MARGIN`, defines whether to cluster features or samples .
 
 ```{r bluster_sample_hclust1}
 # Simple use of the hierarchical clustering. Here, the default parameters
@@ -74,9 +73,7 @@ samples/features. There are two approaches: agglomerative ("bottom-up")
 and divisive ("top-down"). In agglomerative approach, each observation is first in a unique cluster. The algorithm continues by agglomerating similar clusters. The divisive approach, instead, starts with one cluster that contains all observations. Clusters are split recursively into clusters that differ the most. The clustering ends when each cluster contains only one observation. In this algorithm, the similarity of two clusters is based on the distance
 between them.
 
-Hierarchical clustering can be visualized with a dendrogram tree. In each
-splitting point, the tree is divided into two clusters leading to the
-hierarchy.
+Hierarchical clustering can be visualized with a dendrogram tree. In each splitting point, the tree is divided into two clusters leading to the hierarchy.
 
 Hierarchical clustering requires two steps. 
 1. Computation of the dissimilarities with a given distance.  
@@ -159,7 +156,7 @@ Based on the result, let's divide observations into 2 clusters.
 ```{r hclust6}
 library(dendextend)
 
-# Get optimal number of clusters
+# Get the optimal number of clusters
 k <- res$Best.nc[1]
 
 # Making colors for 2 clusters
@@ -344,7 +341,7 @@ Biclusters can be visualized using heatmap or boxplot, for
 instance. For checking purposes, also scatter plot might be valid
 choice.
 
-Check more ideas for heatmaps from chapters [@sec-viz-chapter] and
+Check out more ideas for heatmaps from chapters [@sec-viz-chapter] and
 [@sec-microbiome-community].
 
 ### Taxa vs samples
@@ -452,7 +449,7 @@ matrices in general. First we pre-process the data.
 # (Only 1st experiment was ordered in cobiclust step leading to unequal order)
 mae[[1]] <- mae[[1]][, colnames(mae[[2]])]
 
-# Make rownames unique since it is required by other steps
+# Make rownames unique, since it is required by other steps
 rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
 
 # Transform the metabolites to be in log basis
