--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -69,7 +69,7 @@ real datasets. This study also concluded that different methods can produce
 contradictory results, creating the risk of cherry-picking the most favorable
 options for one’s own hypothesis. Therefore, it is highly recommended to perform
 DAA with multiple methods to determine whether the findings can be reproduced by
-different approaches. Built on the findings of @Calgaro2020, the *benchdamic* [@Calgaro2022] package could offer a valuable support in this regard. Through a comprehensive evaluation process it serves both practitioners by comparing DA methods from existing literature, and method developers by providing an impartial tool to evaluate their new approaches in comparison to what is already available. For details, check its extensive [vignette](https://www.bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html).
+different approaches. Built on the findings of @Calgaro2020, the *benchdamic* [@Calgaro2022] package could offer a valuable support in this regard. Through a comprehensive evaluation process, it serves both practitioners by comparing DA methods from existing literature, and method developers by providing an impartial tool to evaluate their new approaches in comparison to what is already available. For details, check its extensive [vignette](https://www.bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html).
 
 ## Using the tools
 
@@ -84,7 +84,7 @@ setup and your theory, you must determine how to specify any model
 exactly.  E.g., there might be confounding factors that might drive
 (the absence of) differences between the shown groups that we ignore
 here for simplicity. Or your dataset is repeated sampling design,
-matched-pair design or the general longitudianl design.  We will
+matched-pair design or the general longitudinal design.  We will
 demonstrate how to include covariates in those models. We picked a
 dataset that merely has microbial abundances in a TSE object as well
 as a grouping variable in the sample data. We simplify the examples by
@@ -432,7 +432,7 @@ conclusions, it is good practice to compare the outcomes of different methods in
 Confounders can be defined as variables that are related to and affect the
 apparent dynamics between the response and the main independent variable.
 They are common in experimental studies. Generally, they can be classified
-into 3 groups:
+into three groups:
 
 - Biological confounders, such as age and sex 
 
