--- a/inst/pages/40_machine_learning.qmd
+++ b/inst/pages/40_machine_learning.qmd
@@ -8,11 +8,11 @@ chapterPreamble()
 Machine learning (ML) is a part of artificial intelligence. There are multiple
 definitions, but "machine" refers to computation and "learning" to improving 
 performance based on the data by finding patterns from it. Machine learning
-includes wide variety of methods from simple statistical methods to more 
-complex methods such as neural-networks. 
+includes wide variety of methods, from simple statistical methods to more 
+complex methods such as neural networks. 
 
 Machine learning can be divided into supervised and unsupervised machine learning.
-Supervised ML is used to predict outcome based on the data. Unsupervised ML is used, 
+Supervised ML is used to predict outcomes based on the data. Unsupervised ML is used, 
 for example, to reduce dimensionality (e.g. PCA) and to find clusters from the 
 data (e.g., k-means clustering). 
 
@@ -28,7 +28,7 @@ if(!require(MLeval)){
 }
 ```
 
-"Supervised" means that the training data is introduced before. The training data
+"Supervised" means that the training data is introduced beforehand. The training data
 contains labels (e.g., patient status), and the model is fitted based on the 
 training data. After fitting, the model is utilized to predict labels of data whose 
 labels are not known. 
@@ -56,7 +56,7 @@ assay <- assay(tse, "clr")
 # Transpose assay
 assay <- t(assay)
 
-# Convert into data.frame
+# Convert it into data.frame
 df <- as.data.frame(assay)
 
 # Add labels to assay
@@ -138,11 +138,11 @@ res$roc + res$proc +
 ## Unsupervised machine learning
 
 "Unsupervised" means that the labels (e.g., patient status is not known), 
-and patterns are learned based only the abundance table, for instance. 
+and patterns are learned based only on the abundance table, for instance. 
 Unsupervised ML is also known as a data mining where patterns are extracted 
 from big datasets. 
 
-For unsupervised machine learning, please refer to chapters that are listed below:
+For unsupervised machine learning, please refer to the chapters that're listed below:
 
 - Chapter [@sec-clustering]
 - Chapter [@sec-community-similarity] 
