--- a/inst/pages/90_acknowledgments.qmd
+++ b/inst/pages/90_acknowledgments.qmd
@@ -10,10 +10,10 @@ chapterPreamble()
 Contributions to this Gitbook from the various developers are
 coordinated by:
 
-- *Leo Lahti, DSc*, professor in Data Science at the [Department of
+- *Leo Lahti, DSc*, professor in Data Science in the [Department of
    Computing, University of Turku,
    Finland](https://datascience.utu.fi/), with a focus on
-   computational microbiome analysis. Lahti obtained doctoral degree
+   computational microbiome analysis. Lahti obtained a doctoral degree
    (DSc) from Aalto University in Finland (2010), developing
    probabilistic machine learning with applications to high-throughput
    life science data integration. Since then he has focused on
@@ -23,10 +23,10 @@ coordinated by:
    before starting to develop the _TreeSummarizedExperiment_ /
    _MultiAssayExperiment_ framework and the mia family of Bioconductor
    packages for microbiome data science introduced in this
-   gitbook. Lahti led the development of [national policy on open
+   Gitbook. Lahti led the development of [national policy on open
    access to research methods in
    Finland](https://avointiede.fi/en/policies-materials/policies-open-science-and-research-finland/policy-open-research-data-and-methods).
-   He is current member in the [Bioconductor Community Advisory
+   He is a current member in the [Bioconductor Community Advisory
    Board](https://bioconductor.org/about/community-advisory-board/)
    and runs regular training workshops in microbiome data science.
 
@@ -57,7 +57,7 @@ key authors/contributors include:
    packages](https://microsud.github.io/Tools-Microbiome-Analysis/).
 
 - *Henrik Eckermann*, in particular to the development of
-   the differential abundance analyses
+  differential abundance analyses
 
 - *Chouaib Benchraka* provided various contributions to the package ecosystem and the OMA book
 
