--- a/inst/pages/97_extra_materials.qmd
+++ b/inst/pages/97_extra_materials.qmd
@@ -13,7 +13,7 @@ slide sets for training events.
 
 ## PERMANOVA comparison {#compare-permanova}
 
-Here we present two possible uses of the `adonis2` function which performs PERMANOVA. The
+Here, we present two possible uses of the `adonis2` function, that performs PERMANOVA. The
 optional argument `by` has an effect on the statistical outcome, so its two options are
 compared here.
 
@@ -36,7 +36,7 @@ different orders of three variables with two different approaches:
 library(mia)
 data("enterotype", package="mia")
 enterotype <- transformAssay(enterotype, method = "relabundance")
-# drop samples missing meta data
+# drop samples missing metadata
 enterotype <- enterotype[ , !rowSums(is.na(colData(enterotype)[, c("Nationality", "Gender", "ClinicalStatus")]) > 0)]
 # define variables and list all possible combinations
 vars <- c("Nationality", "Gender", "ClinicalStatus")
