--- a/inst/pages/06_packages.qmd
+++ b/inst/pages/06_packages.qmd
@@ -24,7 +24,7 @@ that support this framework.
 
 ## Package installation
 
-You can install all packages that are required to run every example in this book via the following command:
+You can install all packages that're required to run every example in this book via the following command:
 
 ```{r eval=FALSE, message=FALSE}
 remotes::install_github('microbiome/OMA')
@@ -32,8 +32,7 @@ remotes::install_github('microbiome/OMA')
 
 ### Installing specific packages {#sec-packages_specific}
 
-You can install R packages of your choice with the following command
-line procedure.
+You can install R packages of your choice with the following command line procedure.
 
 <!-- **Bioconductor release version** is the most stable and tested version -->
 <!-- but may miss some of the latest methods and updates. It can be -->
@@ -91,7 +90,7 @@ The following DA methods support `(Tree)SummarizedExperiment`.
 - [LinDA](https://github.com/zhouhj1994/LinDA)
 - [vegan](https://vegandevs.github.io/vegan/)
 - [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (@Silverman2017) phylogeny-aware phILR transformation
-- [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for "tidy" analysis of microbiome and other ecological data
+- [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for the "tidy" analysis of microbiome and other ecological data
 - [Tools for Microbiome Analysis](https://microsud.github.io/Tools-Microbiome-Analysis/)
   site listed over 130 R packages for microbiome data science in2023. 
   Many of these are not in Bioconductor, or do not directly support the data containers 
@@ -100,5 +99,5 @@ The following DA methods support `(Tree)SummarizedExperiment`.
 
 ### Open microbiome data 
 
-Hundreds of published microbiome data sets are readily available in
+Hundreds of published microbiome datasets are readily available in
 these data containers (see [@sec-example-data]).
