--- a/inst/pages/14_alpha_diversity.qmd
+++ b/inst/pages/14_alpha_diversity.qmd
@@ -6,16 +6,16 @@ chapterPreamble()
 ```
 
 Community diversity is a central concept in microbiome research. A
-number of diversity indices are available in ecological literature.
+number of diversity indices are available in the ecological literature.
 
 The main categories of diversity indices include species richness,
-evenness, and diversity; each of them emphasizes different aspects of
+evenness, and diversity; each of these emphasizes different aspects of
 the community heterogeneity [@Whittaker1960], [@Willis2019]. The _Hill
 coefficient_ combines many standard indices into a single equation
 that provides observed richness, inverse Simpson, Shannon diversity,
 and generalized diversity as special cases, with varying levels of
 emphasis on species abundance values. Thus, the term _alpha diversity_
-is often used to refer collectively to all these variants.
+is often used to collectively refer to all these variants.
 
 
 **Diversity** (`estimateDiversity`), summarizes the distribution of
@@ -51,7 +51,7 @@ These main classes of alpha diversity are sometimes complemented by
 indices of dominance or rarity:
 
 **Dominance** (`estimateDominance`) indices are in general negatively correlated with alpha
-  diversity. A high dominance is obtained when one or few species have
+  diversity. A high dominance is obtained when one or a few species have
   a high share of the total species abundance in the community. Note
   that dominance indices are generally inversely correlated with other
   alpha diversity indices.
@@ -82,7 +82,7 @@ species as a measure of richness.
 ```{r plot-richness, message=FALSE, cache=TRUE}
 #| context: setup
 
-# Let us first load some example data.
+# First, let's load some example data.
 library(mia)
 data("GlobalPatterns", package="mia")
 tse <- GlobalPatterns
@@ -98,7 +98,7 @@ head(tse$observed)
 ```
 
 
-Let us visualize results against selected `colData` variables (sample
+Let's visualize the results against selected `colData` variables (sample
 type and final barcode).
 
 ```{r plot-div-obs, message=FALSE, fig.cap="Shannon diversity estimates plotted grouped by sample type with colour-labeled barcode.", cache=TRUE}
@@ -156,7 +156,7 @@ ggplot(df, aes(x = SampleType, y = shannon)) +
   geom_boxplot(outlier.shape = NA) + 
   geom_jitter(width = 0.2) + 
   geom_signif(comparisons = comb, map_signif_level = FALSE,
-              correction="fdr") + #corrects the p-values
+              correction="fdr") + #Corrects the p-values
   theme(text = element_text(size = 10))
 ```
 
@@ -172,7 +172,7 @@ head(tse$faith)
 
 **Note**: because `tse` is a `TreeSummarizedExperiment` object, its phylogenetic tree is used by default. However, the optional argument `tree` must be provided if `tse` does not contain one.
 
-Below a visual comparison between shannon and faith indices is shown with a violin plot.
+Below, a visual comparison between shannon and faith indices is shown with a violin plot.
 
 ```{r phylo-div-2}
 plots <- lapply(c("shannon", "faith"),
@@ -239,7 +239,7 @@ plots <- lapply(plots, "+",
 
 ### Visualizing significance in group-wise comparisons 
 
-Let us next compare Shannon index between sample groups using the
+Next, let's compare the Shannon index between sample groups using the
 standard ggplot tools, and illustrate individual data points with
 `geom_jitter`.
 
@@ -270,4 +270,4 @@ ggplot(colData(tse), aes(x = SampleType, y = shannon)) +
 
 The [ggpubr
 package](http://www.sthda.com/english/articles/24-ggpubr-publication-ready-plots/76-add-p-values-and-significance-levels-to-ggplots/)
-provides further flexibility for estimating and highlighting the significances.
+provides further flexibility for estimating and highlighting significances.
