--- a/inst/pages/21_microbiome_community.qmd
+++ b/inst/pages/21_microbiome_community.qmd
@@ -15,9 +15,9 @@ tse <- GlobalPatterns
 
 ### Composition barplot
 
-A typical way to visualize microbiome composition is by using
+A typical way to visualize microbiome composition is by using a
 composition barplot. In the following, relative abundance is
-calculated and top taxa are retrieved for the Phylum rank. Thereafter,
+calculated, and top taxa are retrieved for the Phylum rank. Thereafter,
 the barplot is visualized ordering rank by abundance values and
 samples by "Bacteroidetes":
 
@@ -45,7 +45,7 @@ plotAbundance(tse_phylum, assay.type="relabundance", rank = "Phylum",
 
 Community composition can be visualized with heatmap, where the
 horizontal axis represents samples and the vertical axis the
-taxa. Color of each intersection point represents abundance of a taxon
+taxa. The color of each intersection point represents abundance of a taxon
 in a specific sample.
 
 Here,  abundances are  first CLR  (centered log-ratio)  transformed to
@@ -71,7 +71,7 @@ tse_phylum <- transformAssay(tse_phylum, assay.type = "clr",
                               method = "z", name = "clr_z")
 ```
 
-Visualize as heatmap.
+Visualize as a heatmap.
 
 ```{r heatmapvisu}
 # Melt the assay for plotting purposes
@@ -147,7 +147,7 @@ taxa_ordered <- get_taxa_name(taxa_tree)
 taxa_tree
 ```
 
-Based on phylo tree, we decide to create three clusters. 
+Based on the phylo tree, we decide to create three clusters. 
 
 ```{r pheatmap4}
 # Creates clusters
@@ -208,7 +208,7 @@ sample_data$sample_types <- unfactor(colData(tse_phylum_subset)$SampleType)
 sample_data
 ```
 
-Now we can create heatmap with additional annotations.
+Now we can create a heatmap with additional annotations.
 
 ```{r pheatmap8}
 # Determines the scaling of colorss
@@ -224,9 +224,9 @@ pheatmap(mat, annotation_row = taxa_clusters,
 ```
 
 In addition, there are also other packages that provide functions for
-more complex heatmaps, such as
+more complex heatmaps, such as those provided by
 [_iheatmapr_](https://docs.ropensci.org/iheatmapr/articles/full_vignettes/iheatmapr.html)
-and ComplexHeatmap [@ComplexHeatmap].
+and ComplexHeatmap [@ComplexHeatmap]. The
 [sechm](http://www.bioconductor.org/packages/release/bioc/vignettes/sechm/inst/doc/sechm.html)
 package provides wrapper for _ComplexHeatmap_ and its usage is
 explained in chapter [@sec-viz-chapter] along with the `pheatmap`
