more grammar changes

--- a/inst/pages/IntegratedLearner.qmd
+++ b/inst/pages/IntegratedLearner.qmd
@@ -8,14 +8,14 @@ chapterPreamble()
 ## Multi-omics Integration
 
 In multiview data analysis, there are two main types of approaches: early fusion
-and late fusion. \underline{Early fusion} combines all datasets into a single
+and late fusion. **_Early fusion_** combines all datasets into a single
 representation, which then serves as input for a supervised learning model. In
-contrast, \underline{late fusion} builds individual models for each data view
+contrast, **_late fusion_** builds individual models for each data view
 and combines their predictions using a second-level model as the final
 predictor. However, these traditional paradigms treat the data views in
 isolation and do not allow for interactions or dependencies between them. A more
 advanced method, called cooperative learning [@Ding2022], which is also known as
-\underline{intermediate fusion}, combines the best of both worlds by encouraging
+**_intermediate fusion_**, combines the best of both worlds by encouraging
 predictions from different data views to align through an agreement parameter
 ($\rho$).
 
@@ -482,8 +482,8 @@ p <- DD %>%
 p
 ```
 
-Based on the bar plot, we observe that \emph{Proteobacteria_bacterium_CAG.139}
-is the species most positively associated, while \emph{Gemmiger_formicilis} is
+Based on the bar plot, we observe that *Proteobacteria_bacterium_CAG.139*
+is the species most positively associated, while *Gemmiger_formicilis* is
 the most negatively associated species. Additionally, L-lysine biosynthesis VI
 is the pathway most positively associated, and PYRIDNUSCYN-PWY: NAD biosynthesis
 I (from aspartate) is the pathway most positively associated, respectively.
