--- a/inst/pages/19_visualization_techniques.qmd
+++ b/inst/pages/19_visualization_techniques.qmd
@@ -120,8 +120,7 @@ in most of the samples (prevalence). The information on abundance and prevalence
 can be summarized into a **jitter** or **density plot** and a **tree**,
 respectively, with the _miaViz_ package.
 
-Specifically, the functions `plotAbundance`, `plotAbundanceDensity`
-and `plotRowTree` are used, and examples on their usage are discussed
+Specifically, the functions `plotAbundance`, `plotAbundanceDensity` and `plotRowTree` are used, and examples on their usage are discussed
 throughout chapter [@sec-quality-control].
 
 ## Diversity estimation
