--- a/inst/pages/01_intro.qmd
+++ b/inst/pages/01_intro.qmd
@@ -19,7 +19,7 @@ collaborative development both within and across research fields. The
 central data infrastructure, the `SummarizedExperiment` data container
 and its derivatives, have already been widely adopted in microbiome
 research, single cell sequencing, and in other fields, allowing
-rapid adoption and extension of emerging data science techniques
+rapid adoption and the extension of emerging data science techniques
 across application domains.
 
 We assume that the reader is already familiar with R programming. For
