--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -17,11 +17,13 @@ Microbiome data display unique characteristics that are exclusively addressed by
 
   ##  Approaches to Handle Zero-Inflated Data : 
 
-      The first approach to target zero-inflated data consists of specialized models, such as       *over-dispersed count models* and *zero-inflated mixture models*. DESeq2, edgeR and           corncorb are based on over-dispersed count models, whereas metagenomeSeq, RAIDA, ZIBB         and Omnibus implement zero-inflated mixture models to address zero-inflation.                 Typically, these models assume a negative binomial, beta-binomial or normal/log-normal        distribution.
+      The first approach to target zero-inflated data consists of specialized models, such as *over-dispersed count models* and *zero-inflated mixture models*. DESeq2, edgeR and             corncorb are based on over-dispersed count models, whereas metagenomeSeq, RAIDA, ZIBB and Omnibus implement zero-inflated mixture models to address zero-inflation.               
+      Typically, these models assume a negative binomial, beta-binomial or normal/log-normal distribution.
       
-      Another approach to deal with zero-inflated data is *zero imputation* where zeros are         replaced with estimated values. ALDEx2 and eBay apply a Bayesian model to impute the          zeros when working with proportion data, accounting for sampling variability and              sequencing depth variation. Other methods, such as MaAsLin2 and ANCOMBC impute the            zeros with a pseudo-count strategy.
+      Another approach to deal with zero-inflated data is *zero imputation* where zeros are replaced with estimated values. ALDEx2 and eBay apply a Bayesian model to impute the              zeros when working with proportion data, accounting for sampling variability and sequencing depth variation. Other methods, such as MaAsLin2 and ANCOMBC impute the            
+      zeros with a pseudo-count strategy.
 
-    ##Approaches to handle Compositional Data : 
+   ## Approaches to handle Compositional Data : 
 
       To address the compositionality of microbiome data, several approaches   have been 
       developed to perform robust normalization with methods specifically designed to reduce 
@@ -35,17 +37,17 @@ Microbiome data display unique characteristics that are exclusively addressed by
 
       *Centered log-ratio transformation (CLR)* normalization used by ALDEx2.
 
-      *Geometric mean of pairwise ratios (GMPR)* normalization used by Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional bias by an empirical Bayes approach. 
+      *Geometric mean of pairwise ratios (GMPR)* normalization used by Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional bias by an empirical Bayes 
+      approach. 
 
-      Other methods to deal with compositional data entail reference taxa approach used by          DACOMP and RAIDA, analyzing the pattern of pairwise log ratios as done by ANCOM and           bias-correction applied by ANCOMBC.
+      Other methods to deal with compositional data entail reference taxa approach used by DACOMP and RAIDA, analyzing the pattern of pairwise log ratios as done by ANCOM and                bias-correction applied by ANCOMBC.
 
 We recommend to have a look at @Nearing2022. In this study, multiple DAA methods were applied to 38 different datasets and their results were compared to one another.The study highlighted that different methods might yield varying results due to differing assumptions and normalization techniques. Recently, @Yang2022 comprehensively evaluated DAA methods via a semi-parametric framework and 106 real datasets, concluding that different methods can produce contradictory results, creating the risk of cherry-picking the most favorable options for one’s own hypothesis. Therefore, it is highly recommended to perform DAA with multiple methods to verify if the findings are consistent across different approaches.  Built on the findings of @Calgaro2020, the benchdamic [@Calgaro2022] package could offer a valuable support in this regard through a comprehensive evaluation process. It serves both practitioners by comparing DA methods from existing literature, and method developers by providing an impartial tool to evaluate their new approaches in comparison to what is already available. For more details, refer to its extensive vignette(https://www.bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html).
 
 ## Using the tools
 
 In this section we demonstrate the use of three methods that can be
-recommended based on recent literature (ANCOM-BC [@ancombc2020],
-                                        _ALDEx2_ [@Gloor2016], and _Maaslin2_ [@Mallick2020])
+recommended based on recent literature (ANCOM-BC [@ancombc2020],_ALDEx2_ [@Gloor2016], and _Maaslin2_ [@Mallick2020])
                               
 
 The purpose of this section is to show how to perform DAA in R, not
@@ -390,9 +392,9 @@ conclusions, it is good practice to compare the outcomes of different methods in
     knitr::kable()
   ```
   
-  ###Further information on tools for DAA : 
+  ### Further information on tools for DAA : 
   
-  ##LinDA
+  ## LinDA
   
   LinDA covers linear models for differential abundance analysis of microbiome compositional data (@Zhou2022). This is very similar to ANCOMBC with few differences: 
     
@@ -404,7 +406,7 @@ conclusions, it is good practice to compare the outcomes of different methods in
   
   Nevertheless, LinDA seems a promising tool that achieves a very good power/fdr trade-off together with ANCOMBC according to the review. The speed improvements might make it critical especially for datasets that have higher sample or feature set sizes.
   
-  ##ZicoSeq
+  ## ZicoSeq
   
   Subsequently, we demonstrate DAA with ZicoSeq, a method based on linear models and permutation. Further details can be found in this tutorial. This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components:
     
