--- a/inst/pages/01_intro.qmd
+++ b/inst/pages/01_intro.qmd
@@ -5,10 +5,8 @@ library(rebook)
 chapterPreamble()
 ```
 
-This work - [**Orchestrating Microbiome Analysis with Bioconductor**](https://microbiome.github.io/OMA/) [@OMA] - contributes novel
-methods and educational resources for microbiome data science.  It
-aims to teach the grammar of Bioconductor workflows in the context of
-microbiome data science. We show through concrete examples how to use
+This work - [**Orchestrating Microbiome Analysis with Bioconductor**](https://microbiome.github.io/OMA/) [@OMA] - contributes novel methods and educational resources for microbiome data science. It aims to teach the grammar of Bioconductor workflows in the context of
+microbiome data science. We show, through concrete examples, how to use
 the latest developments and data analytical strategies in
 R/Bioconductor for the manipulation, analysis, and reproducible
 reporting of hierarchical, heterogeneous, and multi-modal microbiome
@@ -16,21 +14,21 @@ profiling data. The data science methodology is tightly integrated
 with the broader R/Bioconductor ecosystem that focuses on the
 development of high-quality open research software for life
 sciences (@Gentleman2004, @Huber2015). The support for modularity and
-interoperability is a key to efficient resource sharing and
+interoperability is key to efficient resource sharing and
 collaborative development both within and across research fields. The
 central data infrastructure, the `SummarizedExperiment` data container
 and its derivatives, have already been widely adopted in microbiome
-research, single cell sequencing, and in other fields, allowing a
-rapid adoption and extensions of emerging data science techniques
+research, single cell sequencing, and in other fields, allowing
+rapid adoption and the extension of emerging data science techniques
 across application domains.
 
 We assume that the reader is already familiar with R programming. For
 references and tips on introductory material for R and Bioconductor,
 see [@sec-resources]. This online resource and its associated
-ecosystem of microbiome data science tools are a result of a
-community-driven development process, and welcoming new users and
+ecosystem of microbiome data science tools is a result of a
+community-driven development process, welcoming new users and
 contributors. You can find more information on how to find us online
-and join the developer community through the project homepage at
+and join the developer community through the project's homepage at
 [microbiome.github.io](https://microbiome.github.io).
 
 The book is organized into three parts. We start by introducing the
