--- a/inst/pages/30_differential_abundance.qmd
+++ b/inst/pages/30_differential_abundance.qmd
@@ -15,32 +15,32 @@ Despite its relevance in current research, the DAA approach has also been subjec
 
 Microbiome data display unique characteristics that are exclusively addressed by DAA tools developed for microbiome analysis. These characteristics include high variability, zero-inflation and compositionality. *High variability* expresses that abundance of taxa often can vary significantly  from sample to sample. *Zero-inflation* means that typically more than 70% of the values are zeros, which could be either due to physical absence (structural zeros) or insufficient sampling effort (sampling zeros). *Compositionality* means that a change in the absolute abundance of one taxon will lead to apparent variations in the relative abundances of other taxa in the same sample. If neglected, such properties may cause significant bias in the results of DAA. Therefore, several approaches have been developed to address the unique properties of microbiome data and provide statistically reliable results.
 
-  ##  Approaches to Handle Zero-Inflated Data : 
+#### Approaches to Handle Zero-Inflated Data : 
 
-      The first approach to target zero-inflated data consists of specialized models, such as *over-dispersed count models* and *zero-inflated mixture models*. DESeq2, edgeR and             corncorb are based on over-dispersed count models, whereas metagenomeSeq, RAIDA, ZIBB and Omnibus implement zero-inflated mixture models to address zero-inflation.               
-      Typically, these models assume a negative binomial, beta-binomial or normal/log-normal distribution.
+The first approach to target zero-inflated data consists of specialized models, such as *over-dispersed count models* and *zero-inflated mixture models*. DESeq2, edgeR and             corncorb are based on over-dispersed count models, whereas metagenomeSeq, RAIDA, ZIBB and Omnibus implement zero-inflated mixture models to address zero-inflation.               
+Typically, these models assume a negative binomial, beta-binomial or normal/log-normal distribution.
       
-      Another approach to deal with zero-inflated data is *zero imputation* where zeros are replaced with estimated values. ALDEx2 and eBay apply a Bayesian model to impute the              zeros when working with proportion data, accounting for sampling variability and sequencing depth variation. Other methods, such as MaAsLin2 and ANCOMBC impute the            
-      zeros with a pseudo-count strategy.
+Another approach to deal with zero-inflated data is *zero imputation* where zeros are replaced with estimated values. ALDEx2 and eBay apply a Bayesian model to impute the              zeros when working with proportion data, accounting for sampling variability and sequencing depth variation. Other methods, such as MaAsLin2 and ANCOMBC impute the            
+zeros with a pseudo-count strategy.
 
-   ## Approaches to handle Compositional Data : 
+#### Approaches to handle Compositional Data : 
 
-      To address the compositionality of microbiome data, several approaches   have been 
-      developed to perform robust normalization with methods specifically designed to reduce 
-      the bias found in the compositional data. Some examples include: 
+To address the compositionality of microbiome data, several approaches   have been 
+developed to perform robust normalization with methods specifically designed to reduce 
+the bias found in the compositional data. Some examples include: 
 
-      *Trimmed mean of M-values (TMM)* normalization used by edgeR.
+- *Trimmed mean of M-values (TMM)* normalization used by edgeR.
 
-      *Relative log expression (RLE)* normalization used by DESeq2. 
+- *Relative log expression (RLE)* normalization used by DESeq2. 
 
-      *Cumulative sum scaling (CSS)* normalization used by metagenomeSeq.
+- *Cumulative sum scaling (CSS)* normalization used by metagenomeSeq.
 
-      *Centered log-ratio transformation (CLR)* normalization used by ALDEx2.
+- *Centered log-ratio transformation (CLR)* normalization used by ALDEx2.
 
-      *Geometric mean of pairwise ratios (GMPR)* normalization used by Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional bias by an empirical Bayes 
-      approach. 
+- *Geometric mean of pairwise ratios (GMPR)* normalization used by Omnibus and Wrench normalization [@Kumar2018], which corrects the compositional bias by an empirical Bayes 
+approach. 
 
-      Other methods to deal with compositional data entail reference taxa approach used by DACOMP and RAIDA, analyzing the pattern of pairwise log ratios as done by ANCOM and                bias-correction applied by ANCOMBC.
+Other methods to deal with compositional data entail reference taxa approach used by DACOMP and RAIDA, analyzing the pattern of pairwise log ratios as done by ANCOM and                bias-correction applied by ANCOMBC.
 
 We recommend to have a look at @Nearing2022. In this study, multiple DAA methods were applied to 38 different datasets and their results were compared to one another.The study highlighted that different methods might yield varying results due to differing assumptions and normalization techniques. Recently, @Yang2022 comprehensively evaluated DAA methods via a semi-parametric framework and 106 real datasets, concluding that different methods can produce contradictory results, creating the risk of cherry-picking the most favorable options for one’s own hypothesis. Therefore, it is highly recommended to perform DAA with multiple methods to verify if the findings are consistent across different approaches.  Built on the findings of @Calgaro2020, the benchdamic [@Calgaro2022] package could offer a valuable support in this regard through a comprehensive evaluation process. It serves both practitioners by comparing DA methods from existing literature, and method developers by providing an impartial tool to evaluate their new approaches in comparison to what is already available. For more details, refer to its extensive vignette(https://www.bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html).
 
@@ -84,7 +84,7 @@ threshold of 10%.
 
 ```{r prep-daa-data}
 # Agglomerate by genus and subset by prevalence
-tse <- subsetByPrevalent(tse,
+tse <- subsetByPrevalentFeatures(tse,
                          rank = "Genus",
                          prevalence = 10 / 100)
 
@@ -124,7 +124,7 @@ set.seed(123)
 x <- aldex.clr(assay(tse), tse$patient_status)     
 ```
 
-The t-test:
+#### The t-test:
 
 ```{r aldex2-ttest}
 # calculates expected values of the Welch's t-test and Wilcoxon rank
@@ -132,9 +132,9 @@ The t-test:
 x_tt <- aldex.ttest(x, paired.test = FALSE, verbose = FALSE)
 ```
 
-Effect sizes:
+#### Effect sizes:
   
-  ```{r aldex2-effect}
+```{r aldex2-effect}
 # Determines the median clr abundance of the feature in all samples and in
 # groups, the median difference between the two groups, the median variation
 # within each group and the effect size, which is the median of the ratio
@@ -317,14 +317,14 @@ expected to agree on a few differentially abundant taxa. To draw more informed
 conclusions, it is good practice to compare the outcomes of different methods in terms of found features, their effect sizes and significances, as well as other method-specific aspects. Such comparative approach is outlined in
 [this exercise](#compare-daa-methods).
   
-  ## DAA with confounding
+#### DAA with confounding
   
-  Confounders can be defined as variables that are related to and affect the
-  apparent dynamics between the response and the main independent variable.
-  They are common in experimental studies. Generally, they can be classified
-  into 3 groups:
+Confounders can be defined as variables that are related to and affect the
+apparent dynamics between the response and the main independent variable.
+They are common in experimental studies. Generally, they can be classified
+into 3 groups:
     
-    - Biological confounders, such as age and sex 
+  - Biological confounders, such as age and sex 
   
   - Technical confounders produced during sample collection, processing and analysis
   
@@ -338,7 +338,7 @@ conclusions, it is good practice to compare the outcomes of different methods in
   controlling for confounders. In the following examples, we will perform DAA
   with a main independent variable and a few confounders.
   
-  ### Selecting confounders
+#### Selecting confounders
   
   In addition to patient status, we will now control for two confounders: cohort
   and library size. The former is a categorical variable with three factors,
@@ -350,19 +350,19 @@ conclusions, it is good practice to compare the outcomes of different methods in
   control for uneven sequencing efforts across samples, rarefaction generally represents a better solution [@Schloss2023]. With that said, library size can be readily computed and added to the colData.
   
   
-  ```{r daa-data-libsize}
+```{r daa-data-libsize}
   # Compute and store library size in colData
   colData(tse)$library_size <- colSums(assay(tse, "counts"))
-  ```
+```
   
-  ### ANCOM-BC
+#### ANCOM-BC
   
-  Here, confounders can be added to the formula along with patient status, the
-  main outcome variable. This way, the model evaluates whether differentially
-  abundant taxa are associated with one of the variables when the other two
-  are kept constant.
+Here, confounders can be added to the formula along with patient status, the
+main outcome variable. This way, the model evaluates whether differentially
+abundant taxa are associated with one of the variables when the other two
+are kept constant.
   
-  ```{r run-adj-ancombc, warning=FALSE}
+```{r run-adj-ancombc, warning=FALSE}
   # perform the analysis 
   ancombc2_out <- ancombc2(tse,
                            assay.type = "counts",
@@ -375,28 +375,28 @@ conclusions, it is good practice to compare the outcomes of different methods in
                            alpha = 0.05,
                            # multi-group comparison is deactivated automatically
                            global = TRUE)
-  ```
+```
   
-  In the output, each taxon is assigned with several effect sizes (lfc, which
+In the output, each taxon is assigned with several effect sizes (lfc, which
                                                                    stands for log-fold change) and adjusted p-values (q). For categorical variables such as patient status and cohort, the statistics indicate whether the abundance
-  of a given taxon is significantly different between the specified group (column
+of a given taxon is significantly different between the specified group (column
                                                                            name) and the reference group (the group that does not appear in the column
                                                                                                           names), whereas for numerical variables such as library size, they indicate
-  whether the abundance of a given taxon varies with that variable.
+whether the abundance of a given taxon varies with that variable.
   
-  ```{r adj-ancombc-res}
-  ancombc2_out$res %>%
+```{r adj-ancombc-res}
+ancombc2_out$res %>%
     dplyr::select(starts_with(c("taxon", "lfc", "q"))) %>%
     arrange(q_patient_statusControl) %>%
     head() %>%
     knitr::kable()
-  ```
+```
   
-  ### Further information on tools for DAA : 
+### Further information on tools for DAA : 
   
-  ## LinDA
+#### LinDA
   
-  LinDA covers linear models for differential abundance analysis of microbiome compositional data (@Zhou2022). This is very similar to ANCOMBC with few differences: 
+LinDA covers linear models for differential abundance analysis of microbiome compositional data (@Zhou2022). This is very similar to ANCOMBC with few differences: 
     
   1. LinDA corrects for the compositional bias differently using the mode of all regression coefficients. 
   
@@ -404,11 +404,11 @@ conclusions, it is good practice to compare the outcomes of different methods in
   
   3. It supports hierarchical models. The latest ANCOMBC versions are also supporting hierarchical models.
   
-  Nevertheless, LinDA seems a promising tool that achieves a very good power/fdr trade-off together with ANCOMBC according to the review. The speed improvements might make it critical especially for datasets that have higher sample or feature set sizes.
+Nevertheless, LinDA seems a promising tool that achieves a very good power/fdr trade-off together with ANCOMBC according to the review. The speed improvements might make it critical especially for datasets that have higher sample or feature set sizes.
   
-  ## ZicoSeq
+#### ZicoSeq
   
-  Subsequently, we demonstrate DAA with ZicoSeq, a method based on linear models and permutation. Further details can be found in this tutorial. This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components:
+Subsequently, we demonstrate DAA with ZicoSeq, a method based on linear models and permutation. Further details can be found in this tutorial. This approach has been assessed to exhibit high power and a low false discovery rate, which has the following components:
     
   1. Winsorization to decrease the influence of outliers;
   
@@ -416,7 +416,7 @@ conclusions, it is good practice to compare the outcomes of different methods in
   
   3. Reference-based multiple-stage normalization to address compositional effects;Additional resources
   
-  ## Additional resources
+### Additional resources
   
   DAA can be performed by several means. Although most of them provide similar
   functionality, some may be more suitable than others given a certain study
